# DeepNestPort

./: .gitignore  .upgrade-assistant  CMakeLists.txt  CMakeSettings.json  DeepNestPort.sln  README.md
DeepNestConsole/: DeepNestConsole.csproj  Program.cs
DeepNestLib/: Background.cs  DeepNestLib.csproj  DxfParser.cs  GeneticAlgorithm.cs  GeometryUtil.cs  NestingConfigurations.cs  NestingContext.cs  SvgNest.cs
DeepNestPort/: DeepNestPort.csproj  Form1.Designer.cs  Form1.cs  Form1.resx
DeepNestPort/Properties/: Settings.Designer.cs
DeepNestPort/dxfs/: 1.dxf  2.dxf  3.dxf
Minkowski/: CMakeLists.txt  compile.bat  compile_linux.bat  minkowski.h
MinkowskiWrapper/: MinkowskiWrapper.cs  MinkowskiWrapper.csproj
MinkowskiWrapper/Properties/: Resources.Designer.cs  Settings.Designer.cs
clipper_library/: clipper.cs  clipper_library.csproj
